# FanMixer

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
include/: fan.h  gpio.h  timer.h
include/system/: FreeRTOSConfig.h  stm32f1xx_hal_conf.h
ldscripts/: STM32F103C6TX_FLASH.ld
src/: fan.c  gpio.c  main.c  timer.c
src/system/: hal_timebase.c  syscalls.c
stm32_workspace/: stm32f103c6a6.ioc
tests/: CMakeLists.txt
tests/mock/: gpio.c  timer.c
tests/src/: main.cpp  tst_fan.cpp  tst_test.cpp
